...
    @FetchRequest(fetchRequest: Chapter.allChaptersSorted())
    private var chapters: FetchedResults<Chapter>

    var body: some View {
        bodyContent
        .listStyle(.plain)
        .navigationTitle("Index")
        .toolbar {
            ToolbarItem(placement: .navigationBarTrailing) {
                NavigationLink("New", value: Destination.chapterCreator)
            }
        }
    }

    @ViewBuilder
    private var bodyContent: some View {
...
