...
                    NavigationLink(value: Destination.page(pageURI: pageViewModel.pageUrl)) {
                        Text("Edit draft from \(pageViewModel.entryDate)")
                    }
                }
            } else if !viewModel.chapterIsEnded {
                NavigationLink(value: Destination.pageCreator(chapterURI: chapter.objectID.uriRepresentation())) {
                    Text("Create a New Page!")
                }
            }

            ForEach(publishedPages) { page in
                let pageVM = PageRowViewModel(page: page)
                NavigationLink(value: Destination.page(pageURI: pageVM.pageUrl)) {
...
