...
    }

    var editorSheet: some View {
        NavigationView {
            ZStack(alignment: .topLeading) {
                VStack {
                    TextField("Enter some text", text: $viewModel.editorText, axis: .vertical)
                        .textFieldStyle(.roundedBorder)
                        .focused($isFocused, equals: .textEditor)
                        .padding()
                    Spacer()
                }
            }
...
                ToolbarItemGroup(placement: .cancellationAction) {
                    Button("Cancel", role: .cancel) {
                        viewModel.isShowingEditor.toggle()
                    }
                }
                ToolbarItemGroup(placement: .confirmationAction) {
                    Button("Update") {
                        viewModel.commitEdit()
                    }
                }
            }
        }
    }
...
