...
        }
        .listStyle(.plain)
        .navigationTitle("\(viewModel.chapterTitle) Entry")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItemGroup(placement: .navigationBarTrailing) {
                let text = page.isDraft ? "Publish" : "Update"
                Button {
                    viewModel.attemptToUpdateDraft()
                } label: {
                    Text(text)
                }
            }
...
